--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -143,3 +143,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_26.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_27.yml
+    relativeToChangelogFile: true
