--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -284,6 +284,7 @@
                         <pattern>net.pladema.**.masterdata.**Dto</pattern>
                         <pattern>net.pladema.hl7.**.dto.**Dto</pattern>
                         <pattern>ar.lamansys.**.dto.**Dto</pattern>
+                        <pattern>net.pladema.**.infrastructure.**.dto.**Dto</pattern>
                     </classPatterns>
                     <excludeClassPatterns>
                         <pattern>ar.lamansys.sgh.publicapi.**.dto.**Dto</pattern>
