tg-5230 Extensiones Locales

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -29,3 +29,5 @@ ws.federar.auth.signKey=federar
 # SNOWSTORM SERVICE
 # ===============================
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
+
+app.gateway.cubejs.apiUrl=http://localhost:4000/cubejs-api/v1
