--- a/back-end/sgx-dashboards/pom.xml
+++ b/back-end/sgx-dashboards/pom.xml
@@ -23,6 +23,13 @@
 
         <dependency>
             <groupId>ar.lamansys</groupId>
+            <artifactId>extensions</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ar.lamansys</groupId>
             <artifactId>sgx-shared</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
