--- a/back-end/extensions/pom.xml
+++ b/back-end/extensions/pom.xml
@@ -46,6 +46,36 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>cz.habarta.typescript-generator</groupId>
+                <artifactId>typescript-generator-maven-plugin</artifactId>
+                <version>2.18.565</version>
+                <executions>
+                    <execution>
+                        <id>generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>process-classes</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jsonLibrary>jackson2</jsonLibrary>
+                    <noFileComment>true</noFileComment>
+                    <sortDeclarations>true</sortDeclarations>
+                    <loggingLevel>Info</loggingLevel>
+                    <mapEnum>asEnum</mapEnum>
+                    <classPatterns>
+                        <pattern>net.pladema.hsi.extensions.infrastructure.controller.dto.**Dto</pattern>
+                    </classPatterns>
+                    <outputKind>module</outputKind>
+                    <outputFile>../../front-end/apps/projects/hospital/src/app/modules/extensions/extensions-model.d.ts</outputFile>
+                    <optionalAnnotations>
+                        <annotation>javax.annotation.Nullable</annotation>
+                        <annotation>org.springframework.lang.Nullable</annotation>
+                    </optionalAnnotations>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
