--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/refresh-fetch": "^0.6.1"
   }
 }
