--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_27.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_27.yml
@@ -1,3 +1,141 @@
 databaseChangeLog: 
     - logicalFilePath: incrementales-v1_27 
 
+    - changeSet:
+        id: care_line-createTable
+        comment: Create table care_line
+        author: bchacon
+        changes:
+            - createTable:
+                tableName: care_line
+                columns:
+                    - column:
+                        autoIncrement: true
+                        constraints:
+                            primaryKey: true
+                            primaryKeyName: PK_care_line
+                        name: id
+                        type: int
+                    - column:
+                        name: description
+                        type: varchar(255)
+                    - column:
+                        name: consultation
+                        type: boolean
+                        defaultValue: ${boolean.false}
+                    - column:
+                        name: procedure
+                        type: boolean
+                        defaultValue: ${boolean.false}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: deleted
+                        type: BOOLEAN
+                        defaultValue: ${boolean.false}
+                    - column:
+                        name: deleted_by
+                        type: int
+                    - column:
+                        name: deleted_on
+                        type: datetime
+                
+    - changeSet:
+        id: care_line_clinical_specialty-createTable
+        comment: Create table care_line_clinical_specialty
+        author: bchacon
+        changes:
+            - createTable:
+                tableName: care_line_clinical_specialty
+                columns:
+                    - column:
+                        autoIncrement: true
+                        constraints:
+                            primaryKey: true
+                            primaryKeyName: PK_care_line_clinical_specialty
+                        name: id
+                        type: int
+                    - column:
+                        name: care_line_id
+                        type: int
+                    - column:
+                        name: clinical_specialty_id
+                        type: int
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: created_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_by
+                        type: int
+                        defaultValue: -1
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: updated_on
+                        type: datetime
+                        defaultValueDate: ${date.now}
+                    - column:
+                        constraints:
+                            nullable: false
+                        name: deleted
+                        type: BOOLEAN
+                        defaultValue: ${boolean.false}
+                    - column:
+                        name: deleted_by
+                        type: int
+                    - column:
+                        name: deleted_on
+                        type: datetime
+            - addForeignKeyConstraint:
+                baseColumnNames: clinical_specialty_id
+                baseTableName: care_line_clinical_specialty
+                constraintName: FK_care_line_clinical_specialty_clinical_specialty
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: clinical_specialty
+                validate: true
+            - addForeignKeyConstraint:
+                baseColumnNames: care_line_id
+                baseTableName: care_line_clinical_specialty
+                constraintName: FK_care_line_clinical_specialty_care_line
+                onDelete: NO ACTION
+                onUpdate: NO ACTION
+                referencedColumnNames: id
+                referencedTableName: care_line
+                validate: true
