--- a/front-end/apps/angular.json
+++ b/front-end/apps/angular.json
@@ -21,9 +21,13 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "dist/hospital",
+            "customWebpackConfig": {
+              "path": "./custom-webpack.config.js",
+              "replaceDuplicatePlugins": true
+            },
             "index": "projects/hospital/src/index.html",
             "main": "projects/hospital/src/main.ts",
             "polyfills": "projects/hospital/src/polyfills.ts",
@@ -78,6 +82,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "AngularCustomWebpackConfig:build"
+          },
           "configurations": {
             "production": {
               "browserTarget": "hospital:build:production"
