--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -40,6 +40,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^12.1.3",
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
@@ -51,7 +52,9 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "ng-packagr": "^12.1.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack-dev-server": "^4.4.0"
   }
 }
