--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -26,6 +26,9 @@ token.expiration=${TOKEN_EXPIRATION:30m}
 refreshToken.expiration=${REFRESHTOKEN_EXPIRATION:2880m}
 validationToken.expiration=${VALIDTOKEN_EXPIRATION:1440m}
 
+# Tiempo de expiracion de password reset token
+password.reset.token.expiration=2d
+
 # =============== EMAIL =================
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
 spring.mail.username=${SMTP_USERNAME:user}
