tg-5386 [BE] Crea módulo de referencia-contrareferencia

--- a/back-end/app/pom.xml
+++ b/back-end/app/pom.xml
@@ -62,6 +62,12 @@
 
         <dependency>
             <groupId>ar.lamansys</groupId>
+            <artifactId>reference-counter-ref</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ar.lamansys</groupId>
             <artifactId>sgx-auth</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
