--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -32,6 +32,7 @@
 		<module>immunization</module>
         <module>hospital-public-api</module>
         <module>nursing</module>
+        <module>reference-counter-ref</module>
     </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
