Comienza desarrollo de 1.28

--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -147,3 +147,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_27.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_28.yml
+    relativeToChangelogFile: true
