--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -67,6 +67,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+	   <dependency>
+            <groupId>ar.lamansys</groupId>
+            <artifactId>reference-counter-ref</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -172,7 +178,7 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
