tg-5383. [BE] Creacion endpoint para unicamente notificar eventos SNVS

--- a/back-end/app/src/main/resources/application-prod.properties
+++ b/back-end/app/src/main/resources/application-prod.properties
@@ -17,4 +17,4 @@ ws.nomivac.synchronization.url=https://bus-dev.msal.gob.ar/fhir/
 
 google.recaptcha.enable = true
 
-
+ws.sisa.snvs.environment=PROD
