--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -159,3 +159,7 @@ ws.federar.claims.aud=${ws.federar.url.base}/bus-auth/auth
 
 ws.bus.url.base=http://mhd.sisa.msal.gov.ar/fhir/
 
+
+
+ws.sisa.snvs.enabled=false
+ws.sisa.snvs.environment=QA
