tg-5478 agrega archivos necesarios para jobs del ci relacionados con cubejs

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -30,4 +30,4 @@ ws.federar.auth.signKey=federar
 # ===============================
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 
-app.gateway.cubejs.apiUrl=http://localhost:4000/cubejs-api/v1
+app.gateway.cubejs.apiUrl=${CUBEJS_URL:http://localhost:4000/cubejs-api}
